hide key entry boxes, until I get key working

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,6 @@ i {
 }
 
 .message > div {
-  min-height: 20px;
   padding:1em;
 
 }
@@ -49,5 +48,16 @@ button {
 }
 
 h1 {
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 }
+
+.keylabel {
+  display: none;
+}
+.key {
+  display: none;
+}
+
+
+
+
